--- a/templates/profil/_form.html.twig
+++ b/templates/profil/_form.html.twig
@@ -1,4 +1,25 @@
-{{ form_start(form) }}
-    {{ form_widget(form) }}
-    <button class="btn">{{ button_label|default('Save') }}</button>
+{{ form_start(form, {'attr': {'class': 'needs-validation', 'novalidate': 'novalidate'}}) }}
+    <div class="row g-4">
+        <div class="col-md-6">
+            {{ form_row(form.prenom, {'attr': {'class': 'form-control rounded-pill px-3'}}) }}
+        </div>
+        <div class="col-md-6">
+            {{ form_row(form.nom, {'attr': {'class': 'form-control rounded-pill px-3'}}) }}
+        </div>
+        <div class="col-md-12">
+            {{ form_row(form.email, {'attr': {'class': 'form-control rounded-pill px-3'}}) }}
+        </div>
+        <div class="col-md-6">
+            {{ form_row(form.roleType, {'attr': {'class': 'form-select rounded-pill px-3'}}) }}
+        </div>
+        <div class="col-md-6">
+            {{ form_row(form.telephone, {'attr': {'class': 'form-control rounded-pill px-3', 'placeholder': '+216 -- --- ---'}}) }}
+        </div>
+    </div>
+
+    <div class="mt-5 d-grid">
+        <button type="submit" class="btn btn-success btn-lg rounded-pill fw-bold shadow-sm">
+            <i class="fas fa-save me-2"></i> {{ button_label|default('Enregistrer les modifications') }}
+        </button>
+    </div>
 {{ form_end(form) }}
