--- a/templates/profil/_delete_form.html.twig
+++ b/templates/profil/_delete_form.html.twig
@@ -1,4 +1,6 @@
-<form method="post" action="{{ path('app_profil_delete', {'id': profile.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
-    <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ profile.id) }}">
-    <button class="btn">Delete</button>
+<form method="post" action="{{ path('app_profil_delete', {'id': user.id}) }}" onsubmit="return confirm('Êtes-vous sûr de vouloir supprimer votre compte ? Cette action est irréversible.');">
+    <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ user.id) }}">
+    <button class="btn btn-danger rounded-pill px-4">
+        <i class="fas fa-trash-alt me-1"></i> Supprimer le compte
+    </button>
 </form>
